--- a/App/src/main/res/layout/overlay.xml
+++ b/App/src/main/res/layout/overlay.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+     >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello! TechBooster!!!"
-        android:textSize="32px" />
+    <LinearLayout
+        android:id="@+id/overlay_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_gravity="top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Now Logging"
+            android:textSize="32px"
+            android:alpha="1"/>
 
-</LinearLayout>
+        </LinearLayout>
+
+
+</FrameLayout>
